--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.5",
+    "@aws-amplify/datastore-storage-adapter": "^2.1.13",
+    "@aws-amplify/react-native": "^1.0.13",
+    "@azure/core-asynciterator-polyfill": "^1.0.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "11.1.0",
+    "aws-amplify": "^6.0.13",
+    "expo": "^50.0.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
